code/java/BestExecutionAnalyticsforSmarterTradingBEAST/v3/docs/CostImpactV3.md


# CostImpactV3

The Cost Impact V3 object

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**strategy** | **String** | Strategy |  [optional]
**riskAversion** | **Double** | RiskAversion |  [optional]
**marketImpactStatus** | **String** | MarketImpactStatus |  [optional]
**message** | **String** | Message |  [optional]
**costPerShare** | **Double** | Cost Per Share |  [optional]
**costPerShareBps** | **Double** | Cost Per Share Bps |  [optional]
**marketImpact** | **Double** | Market Impact |  [optional]
**confidenceInterval** | **Double** | Confidence Interval |  [optional]
**confidenceIntervalBps** | **Double** | Confidence Interval Bps |  [optional]
**liquidityCostPerShare** | **Double** | Liquidity Cost Per Share |  [optional]
**spreadCostPerShare** | **Double** | Spread Cost Per Share |  [optional]
**liquidityCostPerShareBps** | **Double** | Liquidity Cost Per Share Bps |  [optional]
**spreadCostPerShareBps** | **Double** | Spread Cost Per Share Bps |  [optional]
**outputStrategyBinDataDtoList** | [**java.util.List&lt;OutputStrategyBinData&gt;**](OutputStrategyBinData.md) | Output Strategy Bin Data List |  [optional]


## Implemented Interfaces

* Serializable


